-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v0.33 - Feb 13, 2018

 + core: add --globcmd.pipe-name command line argument
   (can easily start and control many instances in parallel)
 + wasapi: recording audio in loopback mode is now continuous
   (record silence if nothing else is playing)
 + gui: new command: Help -> "Check for Updates"
 - icy: --out-copy: segfault on exit


fmedia v0.32 - Jan 15, 2018

 - winXP: fix startup (unsupported imported function in core.dll and unsupported GUI behaviour)
 * --print-time: show more detailed info


fmedia v0.31 - Dec 10, 2017

 + ICY: save tracks from AAC radio stream into .m4a (with --stream-copy)

 + .aac reader: support --stream-copy to .mp4
 - .mpc decode: an "AP" block could be skipped
 - ICY: reset HTTP response headers on reconnect
 * net: don't reconnect if server closed connection gracefully
 - WASAPI: exclusive mode: hanging after starting the next track (v0.29 bug)
 - TUI: apply volume on track change
 * TUI: linux: remove separate thread for reading from stdin
 * core.so is loaded dynamically from mod/
   all modules were moved to mod/


fmedia v0.30.2 - Nov 8, 2017

 - core: Linux,FreeBSD: couldn't run fmedia executable from $PATH (v0.30 bug)
 - ICY: corrupt data (MP3) or error (AAC) in some cases (v0.30 bug)


fmedia v0.30.1 - Nov 7, 2017

 - core: Linux,FreeBSD: couldn't run fmedia executable from symlink (v0.30 bug)
 - core: Linux: timer restart failed with an error "File exists" (v0.30 bug)


fmedia v0.30 - Nov 5, 2017

 + .aac (ADTS) file input (no seeking)
 + ICY: support shoutcast AAC streams

 * AAC decode: detect real audio format (support implicit SBR, SBR+PS)
 + AAC encode: choose profile between AAC-LC, HE-AAC or HE-AACv2 (--aac-profile option)
 * AAC,ALAC,APE: linux: libfdk-aac-ff.so, libALAC-ff.so, libMAC-ff.so don't depend on the system libstdc++